--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../Домашня робота 17/css/style.css">
+    <link rel="stylesheet" href="..//Домашня робота 17/css/style.css">
     <link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
 </head>
 
