change relative path3

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="..//Домашня робота 17/css/style.css">
-    <link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <header class="header">-
             <div class="header-container">
                 <nav class="nav-header">
-                    <a href="index.html" class="logo-link"><img src="/images/icons/ovf-logo.svg" alt="Логотип"
+                    <a href="index.html" class="logo-link"><img src="images/icons/ovf-logo.svg" alt="Логотип"
                             class="nav-logo"></a>
                     <ul class="nav-list">
                         <li class="nav-list-item"><a href="portfolio.html" target="_blank" class="nav-link">Портфоліо</a></li>
