change relative path5

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    <base href="https://viktorpolshkov.github.io/---------------17/">
 </head>
 
 <body>
