change relative path7

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
-    <base href="https://viktorpolshkov.github.io/---------------17/">
 </head>
 <body>
     <div class="wrapper">
@@ -22,21 +21,21 @@
                     <a href="index.html" class="logo-link"><img src="images/icons/ovf-logo.svg" alt="Логотип"
                             class="nav-logo"></a>
                     <ul class="nav-list">
-                        <li class="nav-list-item"><a href="portfolio.html" target="_blank" class="nav-link">Портфоліо</a></li>
+                        <li class="nav-list-item"><a href="html/portfolio.html" class="nav-link">Портфоліо</a></li>
                         <li class="nav-list-item"><a href="#" target="_blank" class="nav-link">Про мене</a></li>
                         <li class="nav-list-item"><a href="#" target="_blank" class="nav-link">Контакти</a></li>
                     </ul>
                     <div class="social-media-block">
-                        <a href="https://www.facebook.com/" class="social-media-link"><img
-                                src="/images/icons/facebook-logo.svg" alt="Facebook" class="social-media-logo"> </a>
-                        <a href="https://www.instagram.com/" class="social-media-link"><img
-                                src="/images/icons/instagram-logo.svg" alt="Instagram" class="social-media-logo"></a>
+                        <a href="https://www.facebook.com/" target="_blank" class="social-media-link"><img
+                                src="images/icons/facebook-logo.svg" alt="Facebook" class="social-media-logo"> </a>
+                        <a href="https://www.instagram.com/" target="_blank" class="social-media-link"><img
+                                src="images/icons/instagram-logo.svg" alt="Instagram" class="social-media-logo"></a>
                     </div>
                     <button class="burger-button" type="button">
                     </button>
                     <div class="burger-menu">
                         <ul class="nav-list burger-list">
-                            <li class="nav-list-item"><a href="portfolio.html" class="nav-link">Портфоліо</a></li>
+                            <li class="nav-list-item"><a href="html/portfolio.html" class="nav-link">Портфоліо</a></li>
                             <li class="nav-list-item"><a href="#" class="nav-link">Про мене</a></li>
                             <li class="nav-list-item"><a href="#" class="nav-link">Контакти</a></li>
                         </ul>
@@ -58,7 +57,7 @@
             </div>
         </footer>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 
