change relative path9

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                             <li class="nav-list-item"><a href="#" class="nav-link">Про мене</a></li>
                             <li class="nav-list-item"><a href="#" class="nav-link">Контакти</a></li>
                         </ul>
+                        <div class="overlay"></div>
                     </div>
                 </nav>
             </div>
